<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndersenRickMorty</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="yes_internet">There Is Internet Connection</string>

    <string-array name="status_of_character">
        <item>no status</item>
        <item>alive</item>
        <item>dead</item>
        <item>unknown</item>

    </string-array>
    <string-array name="gender_of_character">
        <item>no gender</item>
        <item>female</item>
        <item>male</item>
        <item>genderless</item>
        <item>unknown</item>


    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="air_date">AIR DATE</string>
    <string name="episode">Episode</string>
    <string name="find_character">Find Character</string>
    <string name="no_filter">No Filter</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="find_episode">Find Episode</string>
    <string name="retry">retry</string>
    <string name="no_result">NO RESULT</string>
    <string name="find_location">Find Location</string>
    <string name="nofilter">NoFilter</string>
    <string name="no_gender">no gender</string>
    <string name="no_status">no status</string>
</resources>